--- a/styleProyecto1.css
+++ b/styleProyecto1.css
@@ -12,18 +12,18 @@ body{
     height: 20px;
 }
 .flechaizquierda{
-    width: 15px;
-    height: 15px;
+    width: 30px;
+    height: 20px;
 }
 .flechaderecha{
-    width: 15px;
-    height: 15px;
+    width: 30px;
+    height: 20px;
 }
 
 /* FORMA DEL ENCABEZADO */
 .cabecera{
 display:flex;
-/* width: 100%; */
+width: 71%;
 padding: 6px;
 align-items: center;
 background-color: white;
@@ -47,21 +47,21 @@ border-bottom: 1px solid #ccc;
 
 .cabecera .guardar{
   position: relative;
-  left: 50%;
+  left: 53%;
   border: none !important;
   background-color: white;
 }
 
 .cabecera .botones{
   position: relative;
-  left: 51%;
+  left: 54%;
   border: none !important;
   background-color: white;
 }
 
 .cabecera .comentarios{
   position: relative;
-  left: 52%;
+  left: 56%;
   border: none !important;
   background-color: rgb(159, 149, 149);
   border-radius: 40%;
@@ -70,7 +70,7 @@ border-bottom: 1px solid #ccc;
 
 .cabecera .avance{
   position: relative;
-  left: 53%;
+  left: 58%;
   border: none !important;
   background-color: rgb(159, 149, 149);
   border-radius: 40%;
@@ -79,11 +79,12 @@ border-bottom: 1px solid #ccc;
 
 .cabecera .publicar{
   position: relative;
-  left: 54%;
+  left: 60%;
   border: none !important;
-  background-color:blue !important;
+  background-color: #2c6bff !important;
   border-radius: 40%;
   padding: 10px;
+  color: white
   
 }
 
@@ -91,7 +92,7 @@ border-bottom: 1px solid #ccc;
   position: relative;
   border-radius: 100%;
   border-color: gray;
-  left: 56%;
+  left: 62%;
 }
 
 /*COLUMNA CONFIGURACIONES DE LA COLUMNA*/
@@ -162,7 +163,7 @@ border-bottom: 1px solid #ccc;
   color: rgb(196, 193, 193);
   border: none;
   background-color: #04054d;
-  width: 50px;
+  width: 45px;
   height: 30px;
   top: 50px;
   margin-left: 139px;
@@ -207,7 +208,7 @@ border-bottom: 1px solid #ccc;
   margin-left: 0.8%;
   background-color: rgb(97, 97, 216);
   color: white;
-  padding-right: 6%;
+  padding-right: 9%;
   padding-left: 0.3%;
   padding-bottom: 0.4%;
   padding-top: 0.2%;
@@ -322,9 +323,9 @@ border-bottom: 1px solid #ccc;
     width: 100%;
     text-align: center;
     height: 13%;
-    background-color: #535b61;
-    border: 2px solid #474b4e;
-    color: #829cae;
+    background-color: #9fccd7    ;
+    border: 2px solid #89a5b0;
+    color: #8099ab;
     cursor: pointer;
    
   }
@@ -338,20 +339,33 @@ border-bottom: 1px solid #ccc;
   display: inline-block;
   vertical-align: top;  
   background-color: #bacdd8;
-  width: 30%;
-  height: 50%;
-  margin-left: 5%;
-  margin-top: 30px;
+  width: 27%;
+  height: 98%;
+  margin-left: 10%;
+  margin-top: 22px;
   align-items: center;
 }
 
 .foto-hombre{
-  width: 240px;
+  width: 200px;
+  height: 180px;
   margin-left: 12px;
   margin-top: 12px;
   border: 20px  solid;
   border-color: #c2e0e0;
 }
+/*contendor azul de editar foto del hombre*/
+.editar-foto{
+  position: flex;
+  background-color: #04054d;
+  width: 75%;
+  height: 45%;
+  vertical-align: middle;
+  border-radius: 20%;
+  margin-left: 13%;
+  margin-top: 5%;
+}
+
 
 /* botones flotantes */
 
